Added content to the css file for carousel image feature

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       sizes="32x32"
       href="favicon/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Carousel</title>
   </head>
   <body>
@@ -44,19 +44,19 @@
           <p class="captionText slideTextFromTop"></p>
         </div>
         <div class="imageHolder">
-          <img src="images/img_1.jpg" />1366X768
+          <img src="images/pexels-drew-rae-580679.jpg" />1366X768
           <p class="captionText">Caption Text-01</p>
         </div>
         <div class="imageHolder">
-          <img src="images/img_2.jpg" />
+          <img src="images/pexels-sebastian-sørensen-750225.jpg" />
           <p class="captionText">Caption Text-02</p>
         </div>
         <div class="imageHolder">
-          <img src="images/img_3.jpg" />
+          <img src="images/pexels-tyler-lastovich-997443.jpg" />
           <p class="captionText">Caption Text-03</p>
         </div>
         <div class="imageHolder">
-          <img src="images/img_4.jpg" />
+          <img src="images/pexels-suzy-hazelwood-1913226.jpg" />
           <p class="captionText">Caption Text-04</p>
         </div>
       </div>
