Made changes to css, html and javascript files

--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
           <p class="captionText slideTextFromTop"></p>
         </div>
         <div class="imageHolder">
-          <img src="images/pexels-drew-rae-580679.jpg" />1366X768
-          <p class="captionText">Caption Text-01</p>
+          <img src="images/pexels-drew-rae-580679.jpg" />
+          <p class="captionText">Drew Rae</p>
         </div>
         <div class="imageHolder">
           <img src="images/pexels-sebastian-sørensen-750225.jpg" />
-          <p class="captionText">Caption Text-02</p>
+          <p class="captionText">Sebastian Sorensen</p>
         </div>
         <div class="imageHolder">
           <img src="images/pexels-tyler-lastovich-997443.jpg" />
-          <p class="captionText">Caption Text-03</p>
+          <p class="captionText">Tyler Lastovich</p>
         </div>
         <div class="imageHolder">
           <img src="images/pexels-suzy-hazelwood-1913226.jpg" />
-          <p class="captionText">Caption Text-04</p>
+          <p class="captionText">Suzy Hazelwood</p>
         </div>
       </div>
       <div id="dotsContainer"></div>
